# sandboxerp

./: .gitignore  DEVELOPMENT.md  README.es.md  README.md  pyproject.toml
sandboxerp/: __init__.py
sandboxerp/cli/: __init__.py  destroy.py  generate.py  main.py  start.py  stop.py
sandboxerp/docker/: compose.py  templates.py
sandboxerp/engine/: behaviour.py  docker.py  generator.py  health.py  installer.py  license.py  odoo.py  persona_engine.py  seasonality.py  time_engine.py  vat_generators.py
sandboxerp/packs/: loader.py  registry.py
sandboxerp/packs/builtin/: __init__.py  country_cl.yaml  country_es.yaml  country_mx.yaml  country_nl.yaml  country_pt.yaml  retail.yaml
tests/: test_cli.py  test_docker.py  test_installer.py  test_installer_seasonality.py  test_odoo.py  test_pack_cl.py  test_pack_es.py  test_pack_mx.py  test_pack_nl.py  test_pack_pt.py  test_pack_retail.py  test_packs.py  test_persona_engine.py  test_persona_time_integration.py  test_seasonality.py  test_time_engine.py
