[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandboxerp"
version = "0.1.0"
description = "Generate complete, coherent Odoo environments from a YAML spec."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["odoo", "erp", "testing", "sandbox", "devtools", "latam"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "pydantic>=2",
    "faker>=25",
    "docker>=7",
    "httpx>=0.27",
]

[project.scripts]
sandbox = "sandboxerp.cli.main:app"

[project.urls]
Homepage = "https://sandboxerp.team360.cl"
Repository = "https://github.com/getsandboxerp/sandboxerp"
Issues = "https://github.com/getsandboxerp/sandboxerp/issues"

# ---------------------------------------------------------------------------
# Dev / test dependencies
# ---------------------------------------------------------------------------

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
    "ruff>=0.4",
    "sphinx>=7",
    "sphinx-autodoc-typehints>=2",
    "furo",            # clean Sphinx theme
]

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
